# LLaMA-Factory

./: .gitignore  pyproject.toml
data/: dataset_info.json
data/legal_data/: README.md  preprocessing.py
examples/inference/: qwen3_eval.yaml  qwen3_lora16_eval.yaml  qwen3_lora64_eval.yaml  qwen3_lora_eval.yaml  qwen3_rag_eval.yaml
examples/train_full/: qwen3_full_sft_8b.yaml
examples/train_lora/: qwen3_lora16_rag_gsm_sft.yaml  qwen3_lora16_rag_sft.yaml  qwen3_lora16_sft.yaml  qwen3_lora64_sft.yaml
slurm/: infer_full.sh  infer_lora.sh  train_full.sh  train_lora.sh
slurm/lora/: all.sbatch  infer.sbatch  train.sbatch
slurm/multinode/: train.sbatch
slurm/vllm/: vl_infer.sbatch
